# wingpanel-indicator-dropbox

./: .gitignore  README.md  meson.build
data/: com.github.rbribeiro.wingpanel-indicator-dropbox.appdata.xml  com.github.rbribeiro.wingpanel-indicator-dropbox.gresource.xml  indicator.css
icons/: meson.build
src/: Indicator.vala
src/Services/: DirMonitor.vala  Dropbox.vala
src/Widgets/: FileEntry.vala  FileEntry.vala~  FileEntryList.vala  FileEntryList.vala~  PopoverWidget.vala  PopoverWidget.vala~  RecentFiles.vala  SearchHeader.vala  ServiceSwitcher.vala  StatusIndicator.vala
