system_icons_dir = join_paths(datadir, 'icons', 'hicolor')

icon_22_files = files(
  '22x22/apps/dropboxstatus-busy-symbolic.svg',
  '22x22/apps/dropboxstatus-busy2-symbolic.svg',
  '22x22/apps/dropboxstatus-idle-symbolic.svg',
  '22x22/apps/dropboxstatus-stopped-symbolic.svg',
  '22x22/apps/dropboxstatus-symbolic.svg',
)

install_data(icon_22_files,
  install_dir: join_paths(system_icons_dir, 'scalable', 'apps')
)


